--- a/index.html
+++ b/index.html
@@ -774,6 +774,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
+                    <!-- https://formsubmit.co/ -->
                     <form action="https://formsubmit.co/d13efa5ed0663cfd0f04c0b4cf5025b7" method="POST" accept-charset="UTF-8"/>
                         <div class="row">
                             <div class="col-md-6">
@@ -786,7 +787,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                                 <div class="control-group form-group">
-                                    <input type="tel" class="form-control" placeholder="Subject *" id="subject" name="_subject" required data-validation-required-message="Please enter a subject for your message.">
+                                    <input type="text" class="form-control" placeholder="Subject *" id="subject" name="_subject" required data-validation-required-message="Please enter a subject for your message.">
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
