--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
                                     <p class="help-block text-danger"></p>
                                 </div>
                             </div>
-                            <input type="hidden" name="_cc" value="dias.tm@gmail.com">
+                            <input type="hidden" name="_cc" value="paola.busia@unica.it">
                             <div class="col-lg-12 text-center">
                                 <button type="submit" class="btn btn-xl">Send Message</button>
                             </div>
