Temporary removal of submission information for authors, while the platform to be used isn't chosen and operating.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="17th Workshop on Design and Architectures for Signal and Image Processing (DASIP 2024)">
     <link rel="canonical" href="https://dasipws.github.io/">
-
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="/style.css">
@@ -87,7 +87,9 @@
                 <div class="intro-heading">DASIP 2024: Workshop on Design and Architectures for Signal and Image Processing</div>
                 <div class="intro-lead-in">In conjunction with the HiPEAC 2024 Conference in Munich, Germany, January 17-19, 2024</div>
                 <a href="#callforpapers" class="page-scroll btn btn-xl">CALL FOR PAPERS</a>
+<!--
                 <a href="#authors" target="_blank" rel="noopener" class="btn btn-xl">SUBMIT A PAPER</a>
+-->
             </div>
         </div>
     </header>
@@ -244,14 +246,14 @@
                     <p class="text-muted">Each submission will receive at least three independent double blind reviews from the members of the scientific committee. Authors are encouraged to take the reviewers’ comments into account when preparing the final versions of their papers and present the research during the workshop.</p>
 
                     <p class="text-muted">All accepted papers must be presented by one of the authors in order to be included in the workshop proceedings.</p>
-
+<!--
                     <span class="fa-stack fa-3x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-file-upload fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Paper Submission</h4>
                     <p class="text-muted">The submission of papers is done via <a href="https://easychair.org/conferences/?conf=dasip24" target="_blank" rel="noopener">EasyChair</a>. Please submit your paper through the following link: <a href="https://easychair.org/conferences/?conf=dasip24" target="_blank" rel="noopener">https://easychair.org/conferences/?conf=dasip24</a>.</p>
-
+-->
                     <span class="fa-stack fa-3x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-landmark fa-stack-1x fa-inverse"></i>
