--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
             <div class="row text-center">
                 
                 <div class="col-sm-6">
-                    <p class="text-muted">Tiago M. Dias<br>Instituto Superior de Engenharia de Lisboa, Lisbon, Portugal<br><a href="mailto:tiago.dias@isel.pt">tiago.dias@isel.pt</a></p>
+                    <p class="text-muted">Tiago M. Dias<br>ISEL - IPL / INESC-ID, Lisbon, Portugal<br><a href="mailto:tiago.dias@isel.pt">tiago.dias@isel.pt</a></p>
                 </div>
                 
                 <div class="col-sm-6">
