- Deadlines were updated

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-calendar-days fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Importante Dates <span style="color:#fed136">(Updated)</span></h4>
-                    <p class="text-muted">Abstract registration: October 20, 2023<br>Paper submission: October 27, 2023<br>Notification of acceptance: December 1, 2023<br>Camera ready submission: December 11, 2023</p>
+                    <h4 class="service-heading">Importante Dates</h4>
+                    <p class="text-muted">Abstract registration: <del>October 20</del><b><span style="color:#fed136">October 27, 2023</span> (EXTENDED, FINAL)</b><br>Paper submission: <del>October 27</del><b><span style="color:#fed136">November 3, 2023</span> (UPDATED)</b><br>Notification of acceptance: December 1, 2023<br>Camera ready submission: December 11, 2023</p>
                     <p>All deadlines are in Anywhere on Earth (AoE)</p>
                 </div>
 
