--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="17th Workshop on Design and Architectures for Signal and Image Processing (DASIP 2024)">
     <link rel="canonical" href="https://dasipws.github.io/">
+<!--
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+-->
+    <link rel="icon" href="img/logos/cropped-dasip_logo_square-2-192x192.png" sizes="192x192" />
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="/style.css">
